# HoudiniTools

./: .flake8  README.md  V2.README.md  clickup_task_manager_oauth.py  docker-compose.yml  material_browser.py  redshift_material_tool.py  redshift_material_tool_v2.py
Api/: .env  docker-compose.yml  docker-compose.yml.backup  dockerfile  requirements.txt  run.py
AutoMaterialV1Readme/: AUTOMATERIAL.README.md
CivAPI/: .env  civilization_config.py  civilization_docker_compose.txt  civilization_init_files.py  civilization_postman.json  civilization_project_structure.txt  civilization_readme.txt  civilization_routes.py  civilization_run.py  civilization_service.py  civilization_test_examples.py  docker-compose.yml  dockerfile  nginx.conf  requirements.txt
CivContextAPI/: .env  Dockerfile  requirements.txt
ClickUp_Task_Manager/: __init__.py  main.py
Furniture_Layout_Tool/: __init__.py  furniture_layout_tool.py  main.py
LLM_Chat/: __init__.py  main.py
MaterialBrowserReadme/: MaterialBrowser.README.md
RedShift_Material_Tool/: __init__.py  main.py  material_tool.py  material_tool_dialog.py
ShelfTools/: README.md  claude_chat_ui copy.py  clickup_task_manager_oauth copy.py  (+8 more)
WeaponsApi/: Dockerfile  docker-setup.md  implementation-guide.md  postman_collection.json  project-structure.md  pyproject.toml  requirements.txt
WeaponsApi/app/: __init__.py  database.py  main.py
WeaponsApi/app/models/: __init__.py
WeaponsApi/app/routes/: __init__.py  models.py
WeaponsApi/app/services/: model_service.py  texture_service.py
WeaponsApi/app/utils/: __init__.py
(+102 files in other folders)
